User API changes
While getting users pass => "filter": {"skill":"skill name"} in the request body. If you pass empty string, you will get all the users.
