# routes/api/users.js
@@ -1,7 +1,8 @@
-var auth = require("../auth");
-var router = require("express").Router();
-var { User, Skill, UserSkills } = require("../../models/sequelize");
-
+const auth = require("../auth");
+const Sequelize = require("sequelize");
+const router = require("express").Router();
+const { User, Skill, UserSkills } = require("../../models/sequelize");
+const Op = Sequelize.Op;
 const jwt = require("jsonwebtoken");
 const crypto = require("crypto");
 
@@ -42,7 +43,7 @@ router.post("/login", (req, res) => {
         },
         secret
       );
-      res.json({ user: {access_token: token, username: user.username}});
+      res.json({ user: { access_token: token, username: user.username } });
     }
   });
 });
@@ -118,7 +119,21 @@ router.post("/register", (req, res) => {
 });
 
 router.get("/users", auth, (req, res) => {
-  User.findAll().then((users) => res.json(users));
+  const filter = req.body.filter;
+
+  User.findAll({
+    include: [
+      {
+        model: Skill,
+        where: { skillname: { [Op.substring]: filter.skill } },
+        attributes: ["skillname"],
+        through: {
+          attributes: ["skilltype"],
+          // where: { skilltype: filter.learningtype },
+        },
+      },
+    ],
+  }).then((users) => res.json(users));
 });
 
 router.get("/users/:id", auth, (req, res) => {
@@ -135,7 +150,32 @@ router.get("/users/:id", auth, (req, res) => {
     if (!user) {
       return res.status(404).json({ message: "User does not exist." });
     }
-
+    // const resultUser = {
+    //   username: user.username,
+    //   email: user.email,
+    //   isguide: user.isguide,
+    //   islearner: user.islearner,
+    //   iscolearner: user.iscolearner,
+    //   photo: user.photo,
+    //   bio: user.bio,
+    //   phonenumber: user.phonenumber,
+    //   phonenumberprivacy: user.phonenumberprivacy,
+    //   whatsappnumber: user.whatsappnumber,
+    //   whatsappnumberprivacy: user.whatsappnumberprivacy,
+    //   country: user.country,
+    //   state: user.state,
+    //   city: user.city,
+    //   firstname: user.firstname,
+    //   lastname: user.lastname,
+    //   gender: user.gender == 1 ? "male" : "female",
+    //   occupation: user.occupation,
+    //   skills: user.skills.map((skill) => {
+    //     return {
+    //       skillname: skill.skillname,
+    //       skilltype: skill.UserSkills.skilltype,
+    //     };
+    //   }),
+    // };
     res.json(user);
   });
 });
